# birdfeed

./: .gitignore  Cargo.toml  deploy.sh
assets/: index.html
migrations/: 20260201165127_create_articles_table.sql
src/: article.rs  db.rs  main.rs  rss.rs  source.rs
src/scrape/: cidrap.rs  mod.rs  poultryworld.rs  wattagnet.rs
templates/: index.html
