[package]
name = "birdfeed"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.9"
actix-web = "4"
chrono = "0.4.43"
dotenvy = "0.15.7"
lettre = "0.11.19"
reqwest = "0.13.1"
rss = "2.0.12"
scraper = "0.25.0"
serde = {version = "1.0.228", features = ["derive"]}
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite"]}
tokio = {version = "1.49.0", features = ["full"]}
tokio-cron-scheduler = "0.15.1"
